fixed spacing and overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,8 @@
 }
 
 .homepage-showcase > div:nth-child(1){
-  grid-column: 1/13;
+  margin-top:1rem;
+  grid-column: 2/12;
 }
 
 .homepage-showcase > div:nth-child(2){
@@ -82,24 +83,36 @@
 }
 
 .homepage-showcase > div:nth-child(3){
-  grid-column: 7/13;
+  padding-top:2.5rem;
+  grid-column: 7/12;
 }
 
 .homepage-showcase > div:nth-child(5){
-  grid-column: 1/11;
+  grid-column: 2/12;
+
 }
 
 .homepage-showcase > div:nth-child(6){
-  grid-column: 1/13;
+  grid-column: 1/12;
   margin-bottom: 2rem;
 }
 
 
 .about{
   grid-column: 1/13;
-  background-color: rgba(47, 93, 168,.8);
+  background-color: rgba(47, 93, 168,.9);
   color:#f4f4f4;
   padding: 2rem;
+  font-size:1.2rem;
+  line-height: 150%;
+  word-spacing: 115%;
+  letter-spacing: 110%;
+  transition: .4s ease-in-out;
+}
+
+.about:hover{
+  background-color: rgba(47, 93, 168,.6);
+  color: #000;
 }
 
 .about .self-img{
@@ -107,8 +120,13 @@
   width:8rem;
   height:8rem;
   margin:0 auto;
-  border:2px solid #000;
+  border:2px solid #f4f4f4;
   border-radius: 50%;
+  transition: .4s ease-in-out;
+}
+
+#div-hover{
+  border:2px solid #000;
 }
 
 .about h2{
